# libarena

./: .clang-format  CMakeLists.txt  Dockerfile  docker.sh
app/: CMakeLists.txt  configure.cpp  scan.cpp  stream.cpp
cmake/: FindArena.cmake
include/camera/: device.h  exception.h  factory.h  system.h
include/camera/api/: lucid.h
include/camera/interface/: device.h  image.h  system.h
include/camera/lucid/: config.hpp  device.hpp  spec.h  system.hpp  types.h
include/camera/lucid/utils/: model.h
internal/camera/lucid/: network.hpp  spec.hpp
internal/camera/lucid/spec/: common.hpp  htp003s_001.hpp  phx016s_c.hpp  tri028s_c.hpp
src/camera/lucid/: config.cpp  device.cpp  network.cpp  spec.cpp  system.cpp
test/: CMakeLists.txt  init.cpp  multi-async.cpp  multi-sync.cpp  stream.cpp  triggered-async.cpp  triggered-sync.cpp
